--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,27 @@ select {
   appearance: none;
 }
 
+/* W3C standard
+   сейчас только для Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #15152c #f0f0f0;
+}
+
+/* для Chrome/Edge/Safari */
+*::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
+*::-webkit-scrollbar-track {
+  background: #f0f0f0;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #15152c;
+  border-radius: 100px;
+  border: 3px solid #f0f0f0;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -98,6 +119,17 @@ b {
 
 strong {
   font-weight: 700;
+}
+
+/*input[type="text"]{*/
+/*  background-color: white !important;*/
+/*}*/
+/*input[type="number"]{*/
+/*  background-color: white !important;*/
+/*}*/
+
+h5 {
+  font-size: 1rem !important;
 }
 
 @supports (font: -apple-system-body) and (-webkit-appearance: none) {
